--- a/BDWBackgroundTask/BDWBackgroundTask.csproj
+++ b/BDWBackgroundTask/BDWBackgroundTask.csproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BingBackgroundTask.cs" />
+    <Compile Include="PlatformHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
