--- a/BingDailyWallpaper/BingDailyWallpaper.csproj
+++ b/BingDailyWallpaper/BingDailyWallpaper.csproj
@@ -21,6 +21,9 @@
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Never</AppxBundle>
     <PackageCertificateThumbprint>60C549D49AEC4BD6BCE3A130D44BA0906CF36BA1</PackageCertificateThumbprint>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
+    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -157,11 +160,6 @@
       <Project>{60a57609-8686-4651-83e9-f05ddc737ac2}</Project>
       <Name>BDWBackgroundTask</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <SDKReference Include="WindowsMobile, Version=10.0.10240.0">
-      <Name>Windows Mobile Extensions for the UWP</Name>
-    </SDKReference>
   </ItemGroup>
   <ItemGroup>
     <AppxSystemBinary Include="BingDailyWallpaper.dll" />
