--- a/BingDailyWallpaper/BingDailyWallpaper.csproj
+++ b/BingDailyWallpaper/BingDailyWallpaper.csproj
@@ -24,6 +24,8 @@
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
+    <AppxPackageDir>Y:\Desktop\AppPackages\</AppxPackageDir>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -163,11 +165,6 @@
   </ItemGroup>
   <ItemGroup>
     <AppxSystemBinary Include="BingDailyWallpaper.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="BaicaiAppService.SDK.UWP">
-      <HintPath>..\BaicaiAppService.SDK.UWP.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
